Fixed layout issues with removing div with class 'container' out of application.html.erb. Removed text-transform to uppercase of keywords list. Added whitespace to top of visualization.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -180,7 +180,7 @@ h1.search-title {
 }
 
 #timeline-nav {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
   font-size: .735rem;
   font-weight: 700;
   text-transform: uppercase;
@@ -221,7 +221,7 @@ h1.search-title {
 
 .visualization-container {
   width: 100%;
-  padding: 40px;
+  padding-bottom: 40px;
 }
 
 .visualization {
@@ -257,7 +257,7 @@ h1.search-title {
   font-size: 1.333333rem;
   font-weight: 400;
   color: #00c8ff;
-  text-transform: uppercase;
+  // text-transform: uppercase;
 }
 
 .timeline-title {
