--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -3,6 +3,7 @@
   @include span-columns(4);
   @include shift(4);
   padding: 3rem;
+  margin-top: 80px;
   // border: 1px solid #fcfcfc;
 }
 
